--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mssql": "^5.1.0",
     "nodemon": "^1.19.2",
     "sqlite3": "^4.1.0",
-    "tedious": "^6.4.0"
+    "tedious": "^6.4.0",
+    "underscore": "^1.9.1"
   }
 }
